--- a/index.html.htm
+++ b/index.html.htm
@@ -261,7 +261,7 @@
             <!-- <div class="mask"></div>     -->
             <img class="logo" id="ex1-layer" src="../resource/logo_white.svg">
             <div class="people">
-                <img src="../resource/pp_ux.gif" id="main_p1">
+                <img src="pp_ux.gif" id="main_p1">
             </div>
         </div>
         <div class="zone"></div>
